<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileCalendar5</string>
    <string name="action_settings">Settings</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="prevMonth">PreveMonth</string>
    <string name="nextMonth">NextMonth</string>
    <string name="title">Title</string>
    <string name="startTime">Start:</string>
    <string name="endTime">End:</string>
    <string name="allday">All day</string>
    <string name="place">Place</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
</resources>
