<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/textView3"
            android:textSize="24sp">
        </TextView>
        <EditText 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@+id/title">
        </EditText>
    </LinearLayout>
    <TableLayout android:id="@id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content">
            <TextView android:text="@string/startTime"
                android:id="@+id/TextView01"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
            </TextView>
            <TextView android:text="TextView"
                android:id="@+id/startDate"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
            </TextView>
            <TextView android:layout_marginLeft="20dp"
                android:text="TextView"
                android:id="@+id/startTime"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
            </TextView>
       </TableRow>
        <TableRow android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content">
            <TextView android:text="@string/endTime"
                android:id="@+id/TextView02"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
            </TextView>
            <TextView android:text="TextView"
                android:id="@+id/endDate"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
            </TextView>
            <TextView android:layout_marginLeft="20dp"
                android:text="TextView"
                android:id="@+id/endTime"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
            </TextView>
       </TableRow>
    </TableLayout>
    <CheckBox android:text="@string/allday"
        android:layout_height="wrap_content"
        android:id="@+id/allDay"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:checked="false">
    </CheckBox>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/place"
	    android:id="@+id/textView1"
	    android:textSize="24sp">        
    </TextView>
    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/where">
    </EditText>    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:id="@+id/textView2"
        android:textSize="24sp">
    </TextView>
    <EditText android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/content"
        android:layout_weight="1"
        android:layout_gravity="top">
    </EditText>
   <RelativeLayout android:id="@+id/relativeLayout1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
       <Button android:layout_width="wrap_content"
           android:text="@string/discard" 
       	   android:layout_height="wrap_content"
       	   android:id="@+id/discard"
       	   android:layout_alignParentLeft="true">
       </Button>
       <Button android:layout_width="wrap_content"
           android:layout_alignParentTop="true"
           android:text="@string/save" 
       	   android:layout_height="wrap_content"
       	   android:id="@+id/save"
       	   android:layout_alignParentLeft="true">
       </Button>
   </RelativeLayout>
</LinearLayout>
